refactor(SymbolProvider): искать через WorkspaceSymbolIndex
getSymbols больше не обходит все документы и не усекает выдачу слепым limit:
поиск делегируется WorkspaceSymbolIndex.search(query, MAX_RESULTS, cancelChecker),
который возвращает ранжированный top-N из готовых записей, а провайдер лишь
маппит их в WorkspaceSymbol. ScriptVariant→containerName и фильтр поддерживаемых
символов переехали в индекс. Сопоставление стало буквальным fuzzy (подстрока/
подпоследовательность) вместо regex; тесты адаптированы под ранжированную выдачу,
а проверка ScriptVariant перенесена на индекс.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>